...
            android:layout_width="match_parent"
            android:layout_height="@dimen/details_screen_nested_scroll_view_height"
            android:layout_marginHorizontal="@dimen/medium"
            android:layout_marginTop="@dimen/small"
            android:contentDescription="@string/nested_scroll_view_content_description"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toTopOf="@id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageCardView"
            app:layout_constraintTop_toBottomOf="@+id/yearTextView">

            <TextView
                android:id="@+id/descriptionTextView"
                style="@style/BodyMedium"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/media_content_description_text_view_height"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                tools:ignore="TextSizeCheck,VisualLintLongText"
...
