<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/exploreItem"
        android:enabled="true"
        android:icon="@drawable/ic_bottom_bar_item_explore"
        android:contentDescription="@string/bottom_bar_item_explore_content_description"
        android:title="@string/bottom_bar_item_explore_title"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/favoriteItem"
        android:enabled="true"
        android:icon="@drawable/ic_bottom_bar_item_favorite"
        android:contentDescription="@string/bottom_bar_item_favorite_content_description"
        android:title="@string/bottom_bar_item_favorite_title"
        app:showAsAction="ifRoom" />
</menu>