...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium"
        android:layout_marginTop="@dimen/medium"
        android:text="@string/screen_explore_display_text"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/searchView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.SearchView
...
